@@ -1,3 +1,10 @@
+2007-01-20  Benoît Dejean  <benoit@placenet.org>
+
+	* src/util.cpp (SI_gnome_vfs_format_file_size_for_display):
+	
+	Rewritten.
+	Overall CPU usage goes from 7.5% to 5.0%.
+
 2007-01-18  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* src/sysinfo.cpp:  Use HIG capitalization
